Commit al master

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,12 @@
 </head>
 
 <body>
-  <h1>Aqui vamos a hacer un blog post</h1>
-  <p>Y este el parrafo de inicio</p>
+  <div id="container">
+    <div id="post">
+      <h1>Nuevo titulo de el blog post</h1>
+      <p>Y este el parrafo de inicio donde vamos a aprender las cosas de las ramas</p>
+    </div>
+  </div>
 </body>
 
 </html>
