Commit estado inicial cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,11 @@
 
 <body>
   <div id="container">
-    <div id="post">
-      <h1>Nuevo titulo de el blog post</h1>
-      <p>Y este el parrafo de inicio donde vamos a aprender las cosas de las ramas</p>
+    <div id="cabecera"> Cabecera
+      <div id="post">
+        <h1>Nuevo titulo de el blog post</h1>
+        <p>Y este el parrafo de inicio donde vamos a aprender las cosas de las ramas</p>
+      </div>
     </div>
   </div>
 </body>
