Prueba de cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="cabecera"> Cabecera
       <div id="post">
         <h1>Nuevo titulo de el blog post</h1>
-        <p>Y este el parrafo de inicio donde vamos a aprender las cosas de las ramas</p>
+        <p>Y este el parrafo de inicio donde vamos a aprender las cosas de las ramas y eso</p>
       </div>
     </div>
   </div>
