Agregado otro parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
     <div id="post">
       <h1>Nuevo titulo de el blog post</h1>
       <p>Y este el parrafo de inicio donde vamos a aprender las cosas de las ramas</p>
+      <p> Este es el nuevo parrafo de esta monda, para usar el merge</p>
     </div>
   </div>
 </body>
