--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Welcome to the Jungle!</title>
+  <title>Bienvenido a Hyperblog 2.0!</title>
   <link rel="stylesheet" href="css/estilos.css" />
 </head>
 
