--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,18 @@
 
 <body>
   <div id="container">
-    <div id="cabecera"> Cabecera
-      <div id="post">
-        <h1>Nuevo titulo de el blog post</h1>
-        <p>Y este el parrafo de inicio donde vamos a aprender las cosas de las ramas y eso</p>
-      </div>
+    <div id="cabecera">
+      Hyperblog
+      <span id="tagline"> Tu blog de cabecera </span>
     </div>
+    <div id="post">
+      <h1>Nuevo titulo de el blog post</h1>
+      <p>Y este el parrafo de inicio donde vamos a aprender las cosas de las ramas y eso</p>
+
+      <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en
+        Youtube. Excepto si eres un rockstar.</p>
+    </div>
+    <div id="footer">Hecho por mi </div>
   </div>
 </body>
 
